force-app/main/default/objects/Opp_Product__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Visiting Country of Opportunity Account</description>
    <formula>UPPER(Opportunity__r.Account.BillingCountry)</formula>
    <inlineHelpText>Visiting Country of Opportunity Account</inlineHelpText>
    <label>Country</label>
    <type>Text</type>
</CustomField>