force-app/main/default/objects/Opp_Product__c/fields/Date_Lost__c.field-meta.xml
<CustomField>
    <fullName>Date_Lost__c</fullName>
    <description>Date when Status changed to Lost</description>
    <inlineHelpText>Date when Status changed to Lost</inlineHelpText>
    <label>Date Lost</label>
    <type>Date</type>
</CustomField>