force-app/main/default/objects/Opp_Product__c/fields/Date_Won__c.field-meta.xml
<CustomField>
    <fullName>Date_Won__c</fullName>
    <description>Date when Status changed to Won</description>
    <inlineHelpText>Date when Status changed to Won</inlineHelpText>
    <label>Date Won</label>
    <type>Date</type>
</CustomField>