force-app/main/default/objects/Opp_Product__c/fields/Demand_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Demand_Forecast__c</fullName>
    <formula>HYPERLINK(&quot;https://u-blox--a4x.eu26.visual.force.com/apex/MeasuresReport?id=&quot; &amp;  Id , &quot;Demand Forecast&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Demand Forecast</label>
    <type>Text</type>
</CustomField>