force-app/main/default/objects/Opp_Product__c/fields/Flag_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Flag_Approval_Status__c</fullName>
    <description>Set through the Approval Process</description>
    <inlineHelpText>Set through the Approval Process</inlineHelpText>
    <label>Flag Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Recalled</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>