force-app/main/default/objects/Opp_Product__c/fields/Flagged_Item__c.field-meta.xml
<CustomField>
    <fullName>Flagged_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, you can edit the manual forecast in the report opened with &quot;Measure Report&quot; button.</description>
    <inlineHelpText>If checked, you can edit the manual forecast in the report opened with &quot;Measure Report&quot; button. Press &quot;Submit for Approval&quot; button to check or uncheck.</inlineHelpText>
    <label>Flagged Item</label>
    <type>Checkbox</type>
</CustomField>