force-app/main/default/objects/Opp_Product__c/fields/IPR_Coverage__c.field-meta.xml
<CustomField>
    <fullName>IPR_Coverage__c</fullName>
    <label>IPR Coverage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Premium coverage</fullName>
            </value>
            <value>
                <fullName>Prime coverage</fullName>
            </value>
            <value>
                <fullName>Premium except Qualcomm</fullName>
            </value>
            <value>
                <fullName>Prime except Qualcomm</fullName>
            </value>
            <value>
                <fullName>No coverage</fullName>
            </value>
            <value>
                <fullName>Full coverage</fullName>
            </value>
            <value>
                <fullName>All except Qualcomm</fullName>
            </value>
            <value>
                <fullName>All except Interdigital</fullName>
            </value>
            <value>
                <fullName>All except QCOM and IDC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>