force-app/main/default/objects/Opp_Product__c/fields/IPR_value_next_FY__c.field-meta.xml
<CustomField>
    <fullName>IPR_value_next_FY__c</fullName>
    <label>IPR value next FY</label>
    <precision>11</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>