force-app/main/default/objects/Opp_Product__c/fields/Lifetime_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Lifetime_Quantity__c</fullName>
    <description>Estimated total quantity for this Opportunity</description>
    <inlineHelpText>Estimated total quantity for this Opportunity</inlineHelpText>
    <label>Lifetime Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>