force-app/main/default/objects/Opp_Product__c/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <description>Win or loss reason. Required when Status is Won or Lost.</description>
    <inlineHelpText>Win or loss reason. Required when Status is Won or Lost.</inlineHelpText>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Alternative Product</fullName>
            </value>
            <value>
                <fullName>Availability</fullName>
            </value>
            <value>
                <fullName>Features</fullName>
            </value>
            <value>
                <fullName>Follow-up</fullName>
            </value>
            <value>
                <fullName>Incumbent</fullName>
            </value>
            <value>
                <fullName>Micro Opportunity</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Performance</fullName>
            </value>
            <value>
                <fullName>Poor Opp Qualification</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Project Stopped</fullName>
            </value>
            <value>
                <fullName>Relationship</fullName>
            </value>
            <value>
                <fullName>Strategy/Tactics</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>T&amp;C</fullName>
            </value>
            <value>
                <fullName>Technical</fullName>
            </value>
            <value>
                <fullName>Wrong strategy/tactics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>