force-app/main/default/objects/Opp_Product__c/fields/Loss_Reason_Remark__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason_Remark__c</fullName>
    <description>Additional remark to Reason</description>
    <inlineHelpText>Additional remark to Reason</inlineHelpText>
    <label>Reason Remark</label>
    <type>TextArea</type>
</CustomField>