force-app/main/default/objects/Opp_Product__c/fields/MCU_Comment__c.field-meta.xml
<CustomField>
    <fullName>MCU_Comment__c</fullName>
    <label>MCU Comment</label>
    <type>TextArea</type>
</CustomField>