force-app/main/default/objects/Opp_Product__c/fields/MCU_Supplier__c.field-meta.xml
<CustomField>
    <fullName>MCU_Supplier__c</fullName>
    <label>MCU Supplier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NXP</fullName>
            </value>
            <value>
                <fullName>Renesas</fullName>
            </value>
            <value>
                <fullName>Nvidia</fullName>
            </value>
            <value>
                <fullName>Qualcomm</fullName>
            </value>
            <value>
                <fullName>Microchip</fullName>
            </value>
            <value>
                <fullName>Samsung</fullName>
            </value>
            <value>
                <fullName>STMicro</fullName>
            </value>
            <value>
                <fullName>TI</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>