force-app/main/default/objects/Opp_Product__c/fields/MCU_Type__c.field-meta.xml
<CustomField>
    <fullName>MCU_Type__c</fullName>
    <label>MCU Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>MCU_Supplier__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AM335x</fullName>
            </value>
            <value>
                <fullName>AM4x</fullName>
            </value>
            <value>
                <fullName>AM5x</fullName>
            </value>
            <value>
                <fullName>AM6x</fullName>
            </value>
            <value>
                <fullName>iMX6</fullName>
            </value>
            <value>
                <fullName>iMX7</fullName>
            </value>
            <value>
                <fullName>iMX8</fullName>
            </value>
            <value>
                <fullName>RX100</fullName>
            </value>
            <value>
                <fullName>RX200</fullName>
            </value>
            <value>
                <fullName>RX600</fullName>
            </value>
            <value>
                <fullName>RX700</fullName>
            </value>
            <value>
                <fullName>Tegra K1</fullName>
            </value>
            <value>
                <fullName>Snapdragon 8xx</fullName>
            </value>
            <value>
                <fullName>Snapdragon 7xx</fullName>
            </value>
            <value>
                <fullName>Snapdragon 6xx</fullName>
            </value>
            <value>
                <fullName>Snapdragon 4xx</fullName>
            </value>
            <value>
                <fullName>Snapdragon 2xx</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>