force-app/main/default/objects/Opp_Product__c/fields/New_Application_Type__c.field-meta.xml
<CustomField>
    <fullName>New_Application_Type__c</fullName>
    <formula>text(Opportunity__r.New_Application_Type__c)</formula>
    <label>Application Type</label>
    <type>Text</type>
</CustomField>