force-app/main/default/objects/Opp_Product__c/fields/Next_Year_COGS_Budget__c.field-meta.xml
<CustomField>
    <fullName>Next_Year_COGS_Budget__c</fullName>
    <description>Next Year budget calculated using Trigger . It populates value either from Product COGS1,2,3,4 or from Next year COGS SET Value from Product&apos;s &quot;Predicted COGS Info&quot; field.
Format will be - Q1:Q2:Q3:Q4</description>
    <label>Next Year COGS Budget</label>
    <length>255</length>
    <type>Text</type>
</CustomField>