force-app/main/default/objects/Opp_Product__c/fields/Next_Year_COGS_Q1__c.field-meta.xml
<CustomField>
    <fullName>Next_Year_COGS_Q1__c</fullName>
    <description>Formula field to show Next year budget COGS for Quarter 1</description>
    <formula>IF(NOT(ISBLANK(TRIM(LEFT(Next_Year_COGS_Budget__c,(FIND(&quot;:&quot;,Next_Year_COGS_Budget__c)-1))))),VALUE(TRIM(LEFT(Next_Year_COGS_Budget__c,(FIND(&quot;:&quot;,Next_Year_COGS_Budget__c)-1)))),0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Year COGS Q1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>