force-app/main/default/objects/Opp_Product__c/fields/No_Opp_Update__c.field-meta.xml
<CustomField>
    <fullName>No_Opp_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to stop triggering updating parent opportunity to reorder opp products if opportunity is set to Lost. 
It is used in &apos;updateStatusOnOppProduct&apos; and &apos;oppProductTrigger&apos; trigger. If value is changed, then trigger from opp product won&apos;t update its parent Opportunity. If value is not change, then the trigger updates Opportunity record.</description>
    <label>No Opp Update</label>
    <type>Checkbox</type>
</CustomField>