force-app/main/default/objects/Opp_Product__c/fields/Operating_System__c.field-meta.xml
<CustomField>
    <fullName>Operating_System__c</fullName>
    <label>Operating System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Embedded Linux</fullName>
            </value>
            <value>
                <fullName>Yocto Linux</fullName>
            </value>
            <value>
                <fullName>Ubuntu Linux</fullName>
            </value>
            <value>
                <fullName>Other Linux</fullName>
            </value>
            <value>
                <fullName>Android</fullName>
            </value>
            <value>
                <fullName>QNX</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>