force-app/main/default/objects/Opp_Product__c/fields/Opportunity_Account__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Account__c</fullName>
    <formula>Opportunity__r.Account.Name</formula>
    <label>Opportunity Account</label>
    <type>Text</type>
</CustomField>