force-app/main/default/objects/Opp_Product__c/fields/Opportunity_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Account_ID__c</fullName>
    <formula>Opportunity__r.AccountId</formula>
    <label>Opportunity Account ID</label>
    <type>Text</type>
</CustomField>