force-app/main/default/objects/Opp_Product__c/fields/Opportunity_Lifetime_Year__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Lifetime_Year__c</fullName>
    <description>How many years this Opportunity will be in mass production</description>
    <inlineHelpText>How many years this Opportunity will be in mass production</inlineHelpText>
    <label>Opportunity Lifetime (Year)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>