force-app/main/default/objects/Opp_Product__c/fields/Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner__c</fullName>
    <formula>Opportunity__r.Owner.Alias</formula>
    <label>Opportunity Owner</label>
    <type>Text</type>
</CustomField>