force-app/main/default/objects/Opp_Product__c/fields/Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Stage__c</fullName>
    <description>Current Opportunity Stage</description>
    <formula>text(Opportunity__r.StageName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Current Opportunity Stage</inlineHelpText>
    <label>Opportunity Stage</label>
    <type>Text</type>
</CustomField>