force-app/main/default/objects/Opp_Product__c/fields/Ordering_Code__c.field-meta.xml
<CustomField>
    <fullName>Ordering_Code__c</fullName>
    <formula>Product__r.ProductCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ordering Code</label>
    <type>Text</type>
</CustomField>