force-app/main/default/objects/Opp_Product__c/fields/OS_Version__c.field-meta.xml
<CustomField>
    <fullName>OS_Version__c</fullName>
    <label>OS Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>