force-app/main/default/objects/Opp_Product__c/fields/Pipeline_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Revenue__c</fullName>
    <formula>case( text(Status__c),
&quot;Evaluation&quot;, Unit_Price__c *  Annual_Quantity__c,
&quot;Won&quot;, Unit_Price__c *  Annual_Quantity__c,
case( text(Previous_Status__c),
&quot;Evaluation&quot;, Unit_Price__c *  Annual_Quantity__c,
&quot;Won&quot;, Unit_Price__c *  Annual_Quantity__c,
0 ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pipeline Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>