force-app/main/default/objects/Opp_Product__c/fields/Previous_Status__c.field-meta.xml
<CustomField>
    <fullName>Previous_Status__c</fullName>
    <description>Keeping the status before the last change of Opp Product.</description>
    <inlineHelpText>Keeping the status before the last change of Opp Product.</inlineHelpText>
    <label>Previous Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Evaluation</fullName>
            </value>
            <value>
                <fullName>Alternative Product</fullName>
            </value>
            <value>
                <fullName>Won</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Not applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>