force-app/main/default/objects/Opp_Product__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(((1 AND 2) OR (3 AND 4) OR (5 AND 6) OR (9 AND 10)) AND 7) OR 8</booleanFilter>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Opp Product Cellular</value>
        </filterItems>
        <filterItems>
            <field>Product2.Product_Center__c</field>
            <operation>equals</operation>
            <value>Cellular, Services</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Opp Product Positioning</value>
        </filterItems>
        <filterItems>
            <field>Product2.Product_Center__c</field>
            <operation>equals</operation>
            <value>Positioning</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Opp Product Short Range</value>
        </filterItems>
        <filterItems>
            <field>Product2.Product_Center__c</field>
            <operation>equals</operation>
            <value>Short Range</value>
        </filterItems>
        <filterItems>
            <field>Product2.Product_Status__c</field>
            <operation>notEqual</operation>
            <value>End of Life, Obsolete</value>
        </filterItems>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>equals</operation>
            <value>API Admin, Automatic process, System Administrator</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Opp Product Tashang, Opp Product Services</value>
        </filterItems>
        <filterItems>
            <field>Product2.Product_Center__c</field>
            <operation>equals</operation>
            <value>Services, Tashang</value>
        </filterItems>
        <infoMessage>If you cannot find a product you want to add, choose other Record Type.</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Opportunities (Opp Products)</relationshipLabel>
    <relationshipName>Opp_Products</relationshipName>
    <type>Lookup</type>
</CustomField>