force-app/main/default/objects/Opp_Product__c/fields/Product_Center__c.field-meta.xml
<CustomField>
    <fullName>Product_Center__c</fullName>
    <formula>text(Product__r.Product_Center__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Center</label>
    <type>Text</type>
</CustomField>