force-app/main/default/objects/Opp_Product__c/fields/Product_Opp_Match__c.field-meta.xml
<CustomField>
    <fullName>Product_Opp_Match__c</fullName>
    <formula>Product__r.IP_Availability_Date__c &lt;  Start_Production__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Opp Match</label>
    <type>Checkbox</type>
</CustomField>