force-app/main/default/objects/Opp_Product__c/fields/Product_Reason__c.field-meta.xml
<CustomField>
    <fullName>Product_Reason__c</fullName>
    <description>Used for report &amp; dashboard</description>
    <formula>IF(ISBLANK(TEXT(Loss_Reason__c)),&quot;&quot;,Product__r.Name&amp;&quot; (&quot;&amp;TEXT(Loss_Reason__c)&amp;&quot;)&quot;)</formula>
    <label>Product (Reason)</label>
    <type>Text</type>
</CustomField>