force-app/main/default/objects/Opp_Product__c/fields/Product_Start_Production__c.field-meta.xml
<CustomField>
    <fullName>Product_Start_Production__c</fullName>
    <description>Added for dashboard reports</description>
    <formula>Product__r.Name &amp; &quot; (SOP: &quot; &amp; TEXT(YEAR(Opportunity__r.CloseDate)) &amp; &quot;.&quot; &amp; TEXT(MONTH(Opportunity__r.CloseDate))</formula>
    <inlineHelpText>Added for dashboard reports</inlineHelpText>
    <label>Product (Start Production)</label>
    <type>Text</type>
</CustomField>