force-app/main/default/objects/Opp_Product__c/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Opp Products</relationshipLabel>
    <relationshipName>Opp_Products</relationshipName>
    <type>Lookup</type>
</CustomField>