force-app/main/default/objects/Opp_Product__c/fields/Ranking__c.field-meta.xml
<CustomField>
    <fullName>Ranking__c</fullName>
    <description>case(text( Status__c ),
&quot;Won&quot;, 1,
&quot;Evaluation&quot;, 0.5,
&quot;Not applicable&quot;, 0,
0
) * Contribution__c</description>
    <formula>case(text( Status__c ),
&quot;Won&quot;, 1,
&quot;Evaluation&quot;, 0.5,
&quot;Not applicable&quot;, 0,
0
) * Revenue_With_Status_Factor__c / 10000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ranking</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>