force-app/main/default/objects/Opp_Product__c/fields/Reason_Same_As_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Reason_Same_As_Opportunity__c</fullName>
    <description>Added for Apex Class used to add lost Opp Products in Opportunity (SOQL query doesn&apos;t allow field-to-field comparison).</description>
    <formula>IF(TEXT(Loss_Reason__c)=TEXT(Opportunity__r.Reason__c), true, false)</formula>
    <label>Reason Same As Opportunity</label>
    <type>Checkbox</type>
</CustomField>