force-app/main/default/objects/Opp_Product__c/fields/Reference_Budget_Price_next_FY__c.field-meta.xml
<CustomField>
    <fullName>Reference_Budget_Price_next_FY__c</fullName>
    <label>Old Budget Price</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>