force-app/main/default/objects/Opp_Product__c/fields/Report_Name__c.field-meta.xml
<CustomField>
    <fullName>Report_Name__c</fullName>
    <formula>LEFT(Country__c &amp; &quot; - &quot; &amp; Ordering_Code__c &amp; 
IF(LEN(SF_Account_Number__c) &gt; 0,&quot; - &quot; &amp; SF_Account_Number__c,&quot;&quot;) 
,40)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Report Name</label>
    <type>Text</type>
</CustomField>