force-app/main/default/objects/Opp_Product__c/fields/Revenue__c.field-meta.xml
<CustomField>
    <fullName>Revenue__c</fullName>
    <description>Annual Quantity * Unit Price * Opportunity Probability
NOTE: 0 if Status is Alternative Product, Lost, Not Applicable</description>
    <formula>Revenue_Unweighted__c * Status_Factor__c * Opportunity__r.Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Annual Quantity * Unit Price * Opportunity Probability
NOTE: 0 if Status is Alternative Product, Lost, Not Applicable</inlineHelpText>
    <label>Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>