force-app/main/default/objects/Opp_Product__c/fields/Revenue_Unweighted__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Unweighted__c</fullName>
    <description>Annual Quantity * Unit Price</description>
    <formula>if( AND(RecordTypeId = &quot;0122p00000043gT&quot;, Opportunity_Lifetime_Year__c &gt; 1 ),
Annual_Quantity__c * Unit_Price__c * (Opportunity_Lifetime_Year__c - 1),
Annual_Quantity__c * Unit_Price__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Annual Quantity * Unit Price</inlineHelpText>
    <label>Revenue Unweighted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>