force-app/main/default/objects/Opp_Product__c/fields/Revenue_With_Status_Factor__c.field-meta.xml
<CustomField>
    <fullName>Revenue_With_Status_Factor__c</fullName>
    <description>0 if Status is Alternative Product, Lost, Not Applicable</description>
    <formula>Revenue_Unweighted__c * Status_Factor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>0 if Status is Alternative Product, Lost, Not Applicable</inlineHelpText>
    <label>Revenue With Status Factor</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>