force-app/main/default/objects/Opp_Product__c/fields/SF_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>SF_Account_Number__c</fullName>
    <description>SF Account Number of Opportunity Account. To be used as Project Owner.</description>
    <formula>Opportunity__r.Account.SF_Account_Number__c</formula>
    <inlineHelpText>SF Account Number of Opportunity Account. To be used as Project Owner.</inlineHelpText>
    <label>SF Account Number</label>
    <type>Text</type>
</CustomField>