force-app/main/default/objects/Opp_Product__c/fields/Software_Environment__c.field-meta.xml
<CustomField>
    <fullName>Software_Environment__c</fullName>
    <description>Old Help Text: Software environment for customer developed applications; select u-blox Firmware if customer does not plan to develop their own firmware.</description>
    <inlineHelpText>Select what software will run in the u-blox module (e.g. the software developed by u-blox “u-blox connectivity software”, or a customer developed application using OpenCPU)</inlineHelpText>
    <label>Software Environment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>u-blox software</fullName>
            </value>
            <value>
                <fullName>u-blox JavaScript</fullName>
            </value>
            <value>
                <fullName>OpenCPU ARM mbed</fullName>
            </value>
            <value>
                <fullName>OpenCPU Espressif SDK</fullName>
            </value>
            <value>
                <fullName>OpenCPU Nordic SDK</fullName>
            </value>
            <value>
                <fullName>Wirepas software</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>