force-app/main/default/objects/Opp_Product__c/fields/Stage_Lost__c.field-meta.xml
<CustomField>
    <fullName>Stage_Lost__c</fullName>
    <description>Opportunity Stage when Status changed to Lost</description>
    <inlineHelpText>Opportunity Stage when Status changed to Lost</inlineHelpText>
    <label>Stage Lost</label>
    <length>20</length>
    <type>Text</type>
</CustomField>