force-app/main/default/objects/Opp_Product__c/fields/Stage_Won__c.field-meta.xml
<CustomField>
    <fullName>Stage_Won__c</fullName>
    <description>Opportunity Stage when Status changed to Won</description>
    <inlineHelpText>Opportunity Stage when Status changed to Won</inlineHelpText>
    <label>Stage Won</label>
    <length>20</length>
    <type>Text</type>
</CustomField>