force-app/main/default/objects/Opp_Product__c/fields/Start_Production__c.field-meta.xml
<CustomField>
    <fullName>Start_Production__c</fullName>
    <formula>Opportunity__r.CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Production</label>
    <type>Date</type>
</CustomField>