force-app/main/default/objects/Opp_Product__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>When multiple products are in evaluation, set the most probable one as “Evaluation”, all others as “Alternative product”. These will not count as revenue or contribution.</description>
    <inlineHelpText>When multiple products are in evaluation, set the most probable one as “Evaluation”, all others as “Alternative product”. These will not count as revenue or contribution.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Alternative Product</fullName>
            </value>
            <value>
                <fullName>Evaluation</fullName>
                <default>true</default>
                <label>Evaluation</label>
            </value>
            <value>
                <fullName>Won</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Not applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>