force-app/main/default/objects/Opp_Product__c/fields/Status_Factor__c.field-meta.xml
<CustomField>
    <fullName>Status_Factor__c</fullName>
    <formula>case( text(Status__c),
&quot;Evaluation&quot;, 1,
&quot;Won&quot;, 1,
0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status Factor</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>