force-app/main/default/objects/Opp_Product__c/fields/Status_Modified__c.field-meta.xml
<CustomField>
    <fullName>Status_Modified__c</fullName>
    <label>Status Modified</label>
    <type>Date</type>
</CustomField>