force-app/main/default/objects/Opp_Product__c/fields/Type_Number__c.field-meta.xml
<CustomField>
    <fullName>Type_Number__c</fullName>
    <description>Unique product type number. Not used for quotations</description>
    <formula>Product__r.Type_No__c</formula>
    <inlineHelpText>Unique product type number. Not used for quotations</inlineHelpText>
    <label>Type Number</label>
    <type>Text</type>
</CustomField>