force-app/main/default/objects/Opp_Product__c/fields/uB_Office__c.field-meta.xml
<CustomField>
    <fullName>uB_Office__c</fullName>
    <formula>TEXT( Opportunity__r.Account.uB_Office__c )</formula>
    <label>uB Office</label>
    <type>Text</type>
</CustomField>