force-app/main/default/objects/Opp_Product__c/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <formula>&quot;PCS&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit</label>
    <type>Text</type>
</CustomField>